# ug

./: .gitignore  Cargo.toml
ug-core/src/: block.rs  cache.rs  cpu_code_gen.rs  cpu_runtime.rs  interpreter.rs  lang.rs  lazy_buffer.rs  lib.rs  lower_op.rs  quantize.rs  schedule.rs  ssa_opt.rs  tensor_ops.rs
ug-cuda/src/: code_gen.rs
ug-llama/: Cargo.toml
ug-llama/src/: causal_mask.cu  causal_mask.metal  cpu_ops.rs  cuda_ops.rs  flash_attn.cu  flash_attn.metal  main.rs  metal_ops.rs  model.rs  ropei.cu  ropei.metal
ug-metal/: Cargo.toml
ug-metal/examples/: metal_bench.rs
ug-metal/src/: code_gen.rs  lib.rs  metal.rs  reduce.metal  runtime.rs  utils.rs
ug-metal/tests/: lb_tests.rs  metal_features.rs
