[package]
name = "ug-metal"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
objc2 = { workspace = true }
objc2-foundation = { workspace = true }
objc2-metal = { workspace = true }
half = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
ug = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
rand = { workspace = true }
